# optix-denemeleri

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOptiX.cmake  configure_optix.cmake
docs/: Doxyfile  doxygen_sqlite3.db
docs/html/: dir_392723c998bf00a63991d9c7d4280ecc.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaceosc.html  namespaces.html
docs/html/search/: all_0.js  all_1.js  all_2.js  functions_0.js  functions_1.js  namespaces_0.js  searchdata.js
docs/latex/: namespaceosc.tex  namespaces.tex  refman.tex
src/ex01/: CMakeLists.txt  hello.cpp
src/ex02/: CMakeLists.txt  baslatma.hpp  cizer.hpp  cudabellek.hpp  kontrol.hpp  renkciktisi.cpp
